# peek

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/platform/macos/: ffi.rs  mod.rs
